<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/linearSettings"
    android:layout_gravity="end"
    android:background="@color/colorPrimary">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radio_popular"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_textView_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_popular"
            android:drawableLeft="@drawable/ic_popular"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/popular"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/menu_textView_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_top_rated"
            android:drawableLeft="@drawable/ic_top_rated"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/top_rated"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_textView_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_favorite_white"
            android:drawableLeft="@drawable/ic_favorite_white"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/favorites"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
