<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:fitsSystemWindows="true"
        android:theme="@style/NoToolBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/activity_detail_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/movie_poster"
                android:fitsSystemWindows="true"
                android:scaleType="centerInside"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/NoToolBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="14dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="@dimen/card_album_radius"
                    app:cardElevation="@dimen/card_elevation"
                    app:layout_constraintStart_toStartOf="parent">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/activity_detail_poster"
                            android:layout_width="188dp"
                            android:layout_height="288dp"
                            android:layout_margin="8dp"
                            android:contentDescription="@string/movie_poster"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/activity_detail_poster"
                            android:layout_alignLeft="@+id/activity_detail_poster"
                            android:layout_alignRight="@+id/activity_detail_poster"
                            android:layout_alignStart="@+id/activity_detail_poster"
                            android:layout_below="@+id/activity_detail_poster"
                            android:layout_marginBottom="8dp"
                            android:background="@color/mediumTrasparent"
                            android:drawableTop="@drawable/ic_play_arrow"
                            android:gravity="center_horizontal"
                            android:text="@string/trailer"
                            android:textColor="@color/white" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/activity_detail_release_date_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/release_date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/activity_detail_release_date"
                    app:layout_constraintStart_toEndOf="@+id/card_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <TextView
                    android:id="@+id/activity_detail_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_detail_rating_text"
                    app:layout_constraintStart_toEndOf="@+id/card_view"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_release_date_text"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_release_date_text" />

                <TextView
                    android:id="@+id/activity_detail_rating_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/activity_detail_rating"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_release_date_text"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_release_date" />

                <TextView
                    android:id="@+id/activity_detail_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="116dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_top_rated_color"
                    android:drawableStart="@drawable/ic_top_rated_color"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_detail_overview"
                    app:layout_constraintStart_toStartOf="@+id/activity_detail_release_date_text"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_rating_text" />

                <TextView
                    android:id="@+id/activity_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/mediumTrasparent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_headline_material"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view" />

                <TextView
                    android:id="@+id/activity_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/details"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_title" />

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:menu="@menu/my_navigation_items" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_favorite_empty"
        app:elevation="4dp"
        app:layout_anchor="@id/collapsing_toolbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>